[package]
name = "avail-light-bootstrap"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Avail Team"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
confy = "0.5.1"
hex = "0.4.3"
libp2p = { version = "0.51.3", features = ["tokio", "macros", "kad", "ping", "identify", "autonat", "quic"] }
multihash = { version = "0.14.0", default-features = false, features = ["blake3", "sha3"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
